--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <div id="resultados"></div>
 
   <script>
-    const API_KEY = "SUA_CHAVE_API"; // Substitua aqui pela sua chave da API
+    const API_KEY = "af66e9e274b3b922fa0dfb97eb4a5767"; // Substitua aqui pela sua chave da API
     const BASE_URL = "https://v3.football.api-sports.io/fixtures";
 
     document.getElementById("data").valueAsDate = new Date();
