--- a/index.html
+++ b/index.html
@@ -4,30 +4,92 @@
   <meta charset="UTF-8">
   <title>Resultados de Futebol</title>
   <style>
+    :root {
+      --bg-color: #ffffff;
+      --text-color: #111111;
+      --card-bg: #f9f9f9;
+      --border-color: #cccccc;
+    }
+
+    @media (prefers-color-scheme: dark) {
+      :root {
+        --bg-color: #121212;
+        --text-color: #eeeeee;
+        --card-bg: #1e1e1e;
+        --border-color: #333333;
+      }
+    }
+
     body {
+      background-color: var(--bg-color);
+      color: var(--text-color);
       font-family: Arial, sans-serif;
       padding: 20px;
       max-width: 800px;
       margin: auto;
+      transition: background-color 0.3s, color 0.3s;
     }
-    .jogo {
-      border: 1px solid #ccc;
+
+    h1 {
+      font-size: 2em;
+      margin-bottom: 20px;
+    }
+
+    input[type=\"date\"] {
+      padding: 8px;
+      border-radius: 5px;
+      border: 1px solid var(--border-color);
+      background-color: var(--card-bg);
+      color: var(--text-color);
+    }
+
+    button {
+      padding: 8px 16px;
+      margin-left: 10px;
+      border: none;
+      border-radius: 5px;
+      background-color: #007BFF;
+      color: white;
+      cursor: pointer;
+      transition: background-color 0.2s;
+    }
+
+    button:hover {
+      background-color: #0056b3;
+    }
+
+    .jogo, .card-json {
+      border: 1px solid var(--border-color);
       border-radius: 8px;
       padding: 10px;
       margin-bottom: 10px;
+      background-color: var(--card-bg);
+      transition: background-color 0.3s, border-color 0.3s;
     }
-    .jogo h3 {
-      margin: 0;
+
+    .jogo h3, .card-json h4 {
+      margin: 0 0 8px;
+      font-size: 1.2em;
     }
-    .status {
-      font-size: 0.9em;
-      color: #555;
+
+    .status, .card-json p {
+      font-size: 0.95em;
+      color: var(--text-color);
     }
+
     pre {
-      background-color: #f5f5f5;
+      background-color: var(--bg-color);
       padding: 10px;
       border-radius: 8px;
       overflow-x: auto;
+      color: var(--text-color);
+      font-size: 0.9em;
+    }
+
+    .cards-container {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
     }
   </style>
 </head>
@@ -38,10 +100,9 @@
   <div id="resultados"></div>
 
   <script>
-    const API_KEY = "SUA_CHAVE_API"; // Substitua aqui pela sua chave da API
+    const API_KEY = "af66e9e274b3b922fa0dfb97eb4a5767"; // Substitua aqui pela sua chave da API
     const BASE_URL = "https://v3.football.api-sports.io/fixtures";
 
-    // Este é o JSON que você mandou
     const exemploJson = {
       "obter": "classificação%C3%A7%C3%A3o",
       "parâmetros": [],
@@ -72,11 +133,7 @@
         resultados.innerHTML = "";
         if (dataJson.response.length === 0) {
           resultados.innerHTML = "<p>Nenhum jogo encontrado.</p>";
-
-          // Exibe o JSON de exemplo
-          const pre = document.createElement("pre");
-          pre.textContent = JSON.stringify(exemploJson, null, 2);
-          resultados.appendChild(pre);
+          exibirJsonComoCards(exemploJson);
           return;
         }
 
@@ -91,17 +148,34 @@
         });
       } catch (error) {
         resultados.innerHTML = "<p>Erro ao buscar os resultados.</p>";
-
-        // Em caso de erro na chamada, também mostra o JSON
-        const pre = document.createElement("pre");
-        pre.textContent = JSON.stringify(exemploJson, null, 2);
-        resultados.appendChild(pre);
-
+        exibirJsonComoCards(exemploJson);
         console.error(error);
       }
     }
 
-    // Buscar automaticamente ao abrir a página
+    function exibirJsonComoCards(json) {
+      const container = document.createElement("div");
+      container.className = "cards-container";
+
+      for (const chave in json) {
+        const card = document.createElement("div");
+        card.className = "card-json";
+
+        let conteudo = "";
+
+        if (typeof json[chave] === "object") {
+          conteudo = `<pre>${JSON.stringify(json[chave], null, 2)}</pre>`;
+        } else {
+          conteudo = `<p>${json[chave]}</p>`;
+        }
+
+        card.innerHTML = `<h4>${chave.charAt(0).toUpperCase() + chave.slice(1)}:</h4>${conteudo}`;
+        container.appendChild(card);
+      }
+
+      document.getElementById("resultados").appendChild(container);
+    }
+
     buscarResultados();
   </script>
 </body>
