--- a/index.html
+++ b/index.html
@@ -1,64 +1,200 @@
-import { useEffect, useState } from "react"
-import { Card, CardContent } from "@/components/ui/card"
-import { Input } from "@/components/ui/input"
-import { Button } from "@/components/ui/button"
-import axios from "axios"
-
-export default function ResultadosFutebol() {
-  const [data, setData] = useState("")
-  const [jogos, setJogos] = useState([])
-  const [carregando, setCarregando] = useState(false)
-
-  const hoje = new Date().toISOString().split("T")[0]
-
-  const buscarResultados = async (dataSelecionada) => {
-    setCarregando(true)
-    try {
-      const response = await axios.get("https://v3.football.api-sports.io/fixtures", {
-        headers: { "x-apisports-key": "af66e9e274b3b922fa0dfb97eb4a5767" },
-        params: {
-          date: dataSelecionada,
-          timezone: "America/Sao_Paulo"
-        }
-      })
-      setJogos(response.data.response)
-    } catch (error) {
-      console.error("Erro ao buscar jogos:", error)
-    } finally {
-      setCarregando(false)
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+  <meta charset="UTF-8">
+  <title>Resultados de Futebol</title>
+  <style>
+    :root {
+      --bg-color: #ffffff;
+      --text-color: #111111;
+      --card-bg: #f9f9f9;
+      --border-color: #cccccc;
+      --primary-color: #007BFF;
     }
-  }
 
-  useEffect(() => {
-    setData(hoje)
-    buscarResultados(hoje)
-  }, [])
+    @media (prefers-color-scheme: dark) {
+      :root {
+        --bg-color: #121212;
+        --text-color: #eeeeee;
+        --card-bg: #1e1e1e;
+        --border-color: #333333;
+        --primary-color: #3399ff;
+      }
+    }
 
-  return (
-    <div className="p-4 max-w-4xl mx-auto">
-      <h1 className="text-2xl font-bold mb-4">Resultados de Futebol</h1>
-      <div className="flex gap-2 mb-4">
-        <Input type="date" value={data} onChange={(e) => setData(e.target.value)} />
-        <Button onClick={() => buscarResultados(data)}>Buscar</Button>
-      </div>
-      {carregando ? (
-        <p>Carregando...</p>
-      ) : (
-        <div className="grid gap-4">
-          {jogos.map((jogo, idx) => (
-            <Card key={idx}>
-              <CardContent className="p-4">
-                <div className="font-semibold">
-                  {jogo.teams.home.name} {jogo.goals.home} x {jogo.goals.away} {jogo.teams.away.name}
-                </div>
-                <div className="text-sm text-gray-500">
-                  Status: {jogo.fixture.status.long} ({jogo.fixture.status.short})
-                </div>
-              </CardContent>
-            </Card>
-          ))}
-        </div>
-      )}
-    </div>
-  )
-}
+    body {
+      background-color: var(--bg-color);
+      color: var(--text-color);
+      font-family: Arial, sans-serif;
+      padding: 20px;
+      max-width: 800px;
+      margin: auto;
+      transition: background-color 0.3s, color 0.3s;
+    }
+
+    h1 {
+      font-size: 2em;
+      margin-bottom: 20px;
+      text-align: center;
+    }
+
+    .filtros {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      margin-bottom: 20px;
+    }
+
+    input[type="date"],
+    input[type="text"] {
+      padding: 8px;
+      border-radius: 5px;
+      border: 1px solid var(--border-color);
+      background-color: var(--card-bg);
+      color: var(--text-color);
+      width: 100%;
+    }
+
+    button {
+      padding: 10px;
+      background-color: var(--primary-color);
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      font-size: 1em;
+      transition: background-color 0.2s;
+    }
+
+    button:hover {
+      background-color: #0056b3;
+    }
+
+    .spinner {
+      border: 5px solid var(--border-color);
+      border-top: 5px solid var(--primary-color);
+      border-radius: 50%;
+      width: 40px;
+      height: 40px;
+      animation: spin 1s linear infinite;
+      margin: 20px auto;
+    }
+
+    @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
+    }
+
+    .jogo {
+      border: 1px solid var(--border-color);
+      border-radius: 8px;
+      padding: 15px;
+      margin-bottom: 15px;
+      background-color: var(--card-bg);
+      transition: background-color 0.3s;
+    }
+
+    .jogo h3 {
+      margin: 0 0 8px;
+      font-size: 1.2em;
+    }
+
+    .status {
+      font-weight: bold;
+      margin-top: 5px;
+      font-size: 0.95em;
+      padding: 5px;
+      border-radius: 5px;
+      display: inline-block;
+    }
+
+    .status.FT { background-color: #28a745; color: white; } /* Finalizado */
+    .status.LIVE { background-color: #dc3545; color: white; } /* Ao vivo */
+    .status.TBD { background-color: #ffc107; color: black; } /* Programado */
+    .status.NS { background-color: #ffc107; color: black; } /* Não iniciado */
+    .status.PST { background-color: #6c757d; color: white; } /* Adiado */
+  </style>
+</head>
+<body>
+  <h1>Resultados de Futebol</h1>
+
+  <div class="filtros">
+    <input type="date" id="data" />
+    <input type="text" id="liga" placeholder="Buscar por Liga/Campeonato (opcional)" />
+    <input type="text" id="equipe" placeholder="Buscar por Equipe (opcional)" />
+    <button onclick="buscarResultados()">Buscar</button>
+  </div>
+
+  <div id="resultados"></div>
+
+  <script>
+    const API_KEY = "af66e9e274b3b922fa0dfb97eb4a5767"; // Sua chave já inserida
+    const BASE_URL_FIXTURES = "https://v3.football.api-sports.io/fixtures";
+    const BASE_URL_TEAMS = "https://v3.football.api-sports.io/teams";
+
+    document.getElementById("data").valueAsDate = new Date();
+
+    async function buscarResultados() {
+      const dataSelecionada = document.getElementById("data").value;
+      const liga = document.getElementById("liga").value.trim();
+      const equipe = document.getElementById("equipe").value.trim();
+      const resultados = document.getElementById("resultados");
+
+      resultados.innerHTML = '<div class="spinner"></div>';
+
+      try {
+        let url = BASE_URL_FIXTURES;
+        let params = `?timezone=America/Sao_Paulo`;
+
+        if (equipe) {
+          const buscaTime = await fetch(`${BASE_URL_TEAMS}?search=${equipe}`, {
+            headers: { "x-apisports-key": API_KEY }
+          });
+          const dadosTime = await buscaTime.json();
+          if (dadosTime.response.length > 0) {
+            const teamId = dadosTime.response[0].team.id;
+            params += `&team=${teamId}`;
+          } else {
+            resultados.innerHTML = `<p>Equipe não encontrada.</p>`;
+            return;
+          }
+        } else {
+          if (liga) {
+            params += `&league=${liga}`;
+          }
+          if (dataSelecionada) {
+            params += `&date=${dataSelecionada}`;
+          }
+        }
+
+        const response = await fetch(`${url}${params}`, {
+          headers: { "x-apisports-key": API_KEY }
+        });
+        const dataJson = await response.json();
+
+        resultados.innerHTML = "";
+        if (dataJson.response.length === 0) {
+          resultados.innerHTML = "<p>Nenhum jogo encontrado.</p>";
+          return;
+        }
+
+        dataJson.response.forEach(jogo => {
+          const div = document.createElement("div");
+          div.className = "jogo";
+          const status = jogo.fixture.status.short || "TBD";
+          div.innerHTML = `
+            <h3>${jogo.teams.home.name} ${jogo.goals.home ?? "-"} x ${jogo.goals.away ?? "-"} ${jogo.teams.away.name}</h3>
+            <span class="status ${status}">${jogo.fixture.status.long}</span>
+          `;
+          resultados.appendChild(div);
+        });
+      } catch (error) {
+        resultados.innerHTML = "<p>Erro ao buscar os resultados.</p>";
+        console.error(error);
+      }
+    }
+
+    buscarResultados();
+  </script>
+</body>
+</html>
